--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;1,500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="./main.js" defer></script>
     <title>My Movies List</title>
@@ -11,9 +17,9 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1>My Favorite Movies</h1>
+        <h1 class="header-title">My Favorite Movies</h1>
         <button class="btn-add-movie" type="button">add new movie</button>
-        <form action="#" id="form" class="hidden-form">
+        <form action="#" id="form" class="hidden-form block-form">
           <div class="form-group">
             <label
               >img<input name="imgUrl" type="text" placeholder="url image"
